# lumen

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
src/app/: main.py
src/scripts/: run_black.py  run_ruff.py
tests/: test_main.py
